--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ numpy>=1.24.0
 python-dotenv==1.0.0
 tavily-python==0.3.3
 azure-identity==1.15.0
+azure-search-documents==11.4.0
 gunicorn==21.2.0
 watchdog==3.0.0
