--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ python-dotenv==1.0.0
 tavily-python==0.3.3
 azure-identity==1.15.0
 azure-search-documents==11.4.0
+azure-storage-blob==12.19.0
+azure-core==1.29.0
 gunicorn==21.2.0
 watchdog==3.0.0
